--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,21 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("layouts.header.home"), "#" %></li>
         <li><%= link_to t("layouts.header.help"), "#" %></li>
-        <li><%= link_to t("layouts.header.log_in"), "#" %></li>
+        <% if logged_in? %>
+          <li class="dropdown">
+            <%= link_to "#", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
+              <%= t "account" %>
+              <b class="caret"></b>
+            <% end %>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("layouts.header.profile"), current_user %></li>
+              <li class="divider"></li>
+              <li><%= button_to t("layouts.header.log_out"), logout_path, method: :delete %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t("layouts.header.log_in"), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
