--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, t("sign_up") %>
-<h1><%= t("sign_up")%></h1>
+<h1><%= t("users.new.sign_up")%></h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for @user, url: signup_path do |f| %>
@@ -14,9 +14,9 @@
       <%= f.email_field :email %>
       <%= f.label :password %>
       <%= f.password_field :password %>
-      <%= f.label :password_confirmation, t("confirmation") %>
+      <%= f.label :password_confirmation, t("users.new.confirmation") %>
       <%= f.password_field :password_confirmation %>
-      <%= f.submit t("create_my_account"), class: "btn btn-primary" %>
+      <%= f.submit t("users.new.create_my_account"), class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
