--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -102,3 +102,19 @@ aside {
   margin-left: 0;
   width: auto;
 }
+
+.users {
+  list-style: none;
+  margin: 0;
+
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid #ccc;
+  }
+}
+
+.edit_user {
+  display: flex;
+  flex-direction: column;
+}
