--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
         <li><%= link_to t("layouts.header.home"), "#" %></li>
         <li><%= link_to t("layouts.header.help"), "#" %></li>
         <% if logged_in? %>
+          <li><%= link_to "Users", users_path %></li>
           <li class="dropdown">
             <%= link_to "#", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
               <%= t "account" %>
@@ -13,6 +14,7 @@
             <% end %>
             <ul class="dropdown-menu">
               <li><%= link_to t("layouts.header.profile"), current_user %></li>
+              <li><%= link_to t("layouts.header.setting"), edit_user_path(current_user)%></li>
               <li class="divider"></li>
               <li><%= button_to t("layouts.header.log_out"), logout_path, method: :delete %></li>
             </ul>
