--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,8 @@
-<% provide :title, t("sign_up") %>
+<% provide :title, t("users.new.sign_up") %>
+<% provide :button_text, t("users.new.create_my_account")%>
 <h1><%= t("users.new.sign_up")%></h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for @user, url: signup_path do |f| %>
-      <%= render "shared/error_messages.html.erb" %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-      <%= f.label :birthday %>
-      <%= f.date_field :birthday %>
-      <%= f.label :gender %>
-      <%= f.select :gender, ["female", "male", "other"], prompt: "Select gender" %>
-      <%= f.label :email %>
-      <%= f.email_field :email %>
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-      <%= f.label :password_confirmation, t("users.new.confirmation") %>
-      <%= f.password_field :password_confirmation %>
-      <%= f.submit t("users.new.create_my_account"), class: "btn btn-primary" %>
-    <% end %>
+    <%= render "form" %>
   </div>
 </div>
