--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
           <li><%= link_to "Users", users_path %></li>
           <li class="dropdown">
             <%= link_to "#", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
-              <%= t "account" %>
+              <%= t "layouts.header.account" %>
               <b class="caret"></b>
             <% end %>
             <ul class="dropdown-menu">
