--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,17 @@
   <aside class="col-md-4">
     <section class="user_info">
       <h1><%= gravatar_for @user %><%= @user.name %></h1>
-      <p><%= @user.created_at%></p>
-      <p><%= @user.updated_at%></p>
+      <p><%= @user.created_at %></p>
+      <p><%= @user.updated_at %></p>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @microposts.any? %>
+      <h3><%= t("users.show.microposts") %> (<%= @microposts.count %>)</h3>
+      <ol class="microposts">
+        <%= render @microposts %>
+      </ol>
+      <%== pagy_bootstrap_nav @page %>
+    <% end %>
+  </div>
 </div>
