--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,9 +5,11 @@
       <h1><%= gravatar_for @user %><%= @user.name %></h1>
       <p><%= @user.created_at %></p>
       <p><%= @user.updated_at %></p>
+      <%= render "shared/stats" if logged_in?%>
     </section>
   </aside>
   <div class="col-md-8">
+    <%= render "follow_form" if logged_in? %>
     <% if @microposts.any? %>
       <h3><%= t("users.show.microposts") %> (<%= @microposts.count %>)</h3>
       <ol class="microposts">
